--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -3,6 +3,11 @@ FROM rust:1.70 as builder
 
 WORKDIR /app
 
+# 安装 protobuf 编译器（gRPC需要）
+RUN apt-get update && \
+    apt-get install -y protobuf-compiler && \
+    rm -rf /var/lib/apt/lists/*
+
 # 复制 Cargo 文件
 COPY Cargo.toml Cargo.lock ./
 COPY build.rs ./
